<resources>
    <string name="app_name">Desafio jogos 4</string>
    <string name="email_hint">Email</string>
    <string name="remember_checkbox_label">Remember</string>
    <string name="log_in_label">LOG IN</string>
    <string name="create_account_label">Create account</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="name_hint">Name</string>
    <string name="description_label">Description</string>
    <string name="Created_at_label">Created at</string>
    <string name="search_games_label">Search Games</string>
    <string name="add_game_description">Add new game button</string>
    <string name="content_description_start_icon">search icon</string>
    <string name="no_added_game_label">No games added yet.</string>
    <string name="add_update_label">SAVE GAME</string>
    <string name="signout_button_label">SAIR</string>
</resources>