<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/kratos_wallpaper"
    tools:context=".view.UserRegistrationActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grass_green"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grass_green"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grass_green"
                    android:textSize="20sp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/repeat_password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grass_green"
                    android:textSize="20sp"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_label"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:background="@drawable/default_button_background"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>