<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="10dp"
    tools:context=".view.HomeActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_games_label"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintCircleRadius="10dp"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        android:textColorHint="@color/gray"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSearch"
            app:layout_constraintVertical_bias="0.038" />

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:indeterminateTint="@color/grass_green"
        android:indeterminateTintMode="src_in"
        app:layout_constraintTop_toBottomOf="@id/tilSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAddGame"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptySaying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_added_game_label"
        app:layout_constraintTop_toBottomOf="@id/tilSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAddGame"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_game_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>